test/spec_vectors/simd_i32x4_cmp/fail/module_19.wat
(module (func $i32x4.lt_u-arg-empty (result v128) (i32x4.lt_u)))